crates/telemetry-adapters/tests/snapshots/snapshots_games_v3__f1_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_games_v3.rs
expression: normalized
---
speed_ms: 55
steering_angle: 0
throttle: 0
brake: 0
clutch: 0
rpm: 6684.5073
max_rpm: 0
gear: 5
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  brakeinput:
    type: Float
    value: 0
  clutchinput:
    type: Float
    value: 0
  decoder_type:
    type: String
    value: f1_codemasters_udp_bridge
  drs_active:
    type: Boolean
    value: false
  drs_available:
    type: Boolean
    value: false
  enginerate:
    type: Float
    value: 700
  ers_available:
    type: Boolean
    value: false
  gear:
    type: Float
    value: 5
  lataccel:
    type: Float
    value: -0.3
  longaccel:
    type: Float
    value: 0.5
  speed:
    type: Float
    value: 55
  steeringinput:
    type: Float
    value: -0.05
  suspensionpositionfl:
    type: Float
    value: 0
  suspensionpositionfr:
    type: Float
    value: 0
  suspensionpositionrl:
    type: Float
    value: 0
  suspensionpositionrr:
    type: Float
    value: 0
  suspensionvelocityfl:
    type: Float
    value: 0
  suspensionvelocityfr:
    type: Float
    value: 0
  suspensionvelocityrl:
    type: Float
    value: 0
  suspensionvelocityrr:
    type: Float
    value: 0
  throttleinput:
    type: Float
    value: 0.9
  vertaccel:
    type: Float
    value: 0
  wheelpatchspeedfl:
    type: Float
    value: 55
  wheelpatchspeedfr:
    type: Float
    value: 55
  wheelpatchspeedrl:
    type: Float
    value: 55
  wheelpatchspeedrr:
    type: Float
    value: 55
sequence: 0
